# strainer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: Trainer.cpp  Trainer.h  TrainerHeader.h  main.cpp
